# omp

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py
omp/: __init__.py  cli.py  models.py  observer.py  watcher.py
omp/parsers/: __init__.py  base.py  go.py  python.py  typescript.py
tests/: test_core.py  test_observer.py  test_parsers.py  test_storage.py
