[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-memory-protocol"
version = "0.1.0"
description = "The Deterministic Memory Layer for AI Coding Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OMP Contributors"},
]
keywords = ["ai", "memory", "tree-sitter", "coding-agents", "llm", "ast", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "tree-sitter>=0.23.0",
]

[project.optional-dependencies]
python = ["tree-sitter-python>=0.23.0"]
typescript = ["tree-sitter-typescript>=0.23.0"]
javascript = ["tree-sitter-javascript>=0.23.0"]
go = ["tree-sitter-go>=0.23.0"]
all = [
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
dev = [
    "pytest>=7.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/open-memory-protocol/omp"
Repository = "https://github.com/open-memory-protocol/omp"
Issues = "https://github.com/open-memory-protocol/omp/issues"

[project.scripts]
omp = "omp.cli:main"

[tool.setuptools.packages.find]
include = ["omp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
